--- a/inventory/index.html
+++ b/inventory/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
+    <link rel="stylesheet" href="https://use.typekit.net/ykm0lvb.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hosted Power - Inventory</title>
   </head>
